Evaluate the performance and Print results

--- a/Condition Monitoring of Hydraulic System/Boosting.ipynb
+++ b/Condition Monitoring of Hydraulic System/Boosting.ipynb
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b48bf5f",
+   "id": "048eb4e5",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ba97d092",
+   "id": "9d24136a",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "id": "09e1d33a",
    "metadata": {},
    "outputs": [],
@@ -2076,37 +2076,71 @@
     "y_pred_hydraulic = boosting_hydraulic.predict(X_test[['PS1', 'PS2', 'PS3', 'SE', 'FS1', 'TS2']])\n",
     "\n",
     "y_pred_prob_cooler = boosting_cooler.predict_proba(X_test[['CE', 'CP', 'PS4', 'PS5', 'TS1', 'TS2', 'TS3', 'TS4']])\n",
-    "y_pred_prob_valve = bagging_valve.predict_proba(X_test[['PS2', 'PS3']])\n",
-    "y_pred_prob_pump = bagging_pump.predict_proba(X_test[['FS1', 'SE', 'PS1']])\n",
-    "y_pred_prob_hydraulic = bagging_hydraulic.predict_proba(X_test[['PS1', 'PS2', 'PS3', 'SE', 'FS1', 'TS2']])"
+    "y_pred_prob_valve = boosting_valve.predict_proba(X_test[['PS2', 'PS3']])\n",
+    "y_pred_prob_pump = boosting_pump.predict_proba(X_test[['FS1', 'SE', 'PS1']])\n",
+    "y_pred_prob_hydraulic = boosting_hydraulic.predict_proba(X_test[['PS1', 'PS2', 'PS3', 'SE', 'FS1', 'TS2']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c7f85c",
+   "metadata": {},
+   "source": [
+    "# Evaluate the performance for each classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "ee286757",
+   "execution_count": 33,
+   "id": "7db5f5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cooler = accuracy_score(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "accuracy_valve = accuracy_score(y_test['y_valveCondition'], y_pred_valve)\n",
+    "accuracy_pump = accuracy_score(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "accuracy_hydraulic = accuracy_score(y_test['y_hydraulicAcc'], y_pred_hydraulic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1316f62",
+   "metadata": {},
+   "source": [
+    "# Print results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1fd7484e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "multiclass-multioutput is not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Evaluate the model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:211\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m    207\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m    208\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m    209\u001b[0m         )\n\u001b[0;32m    210\u001b[0m     ):\n\u001b[1;32m--> 211\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    212\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    213\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    215\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    217\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[0;32m    218\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    219\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    220\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[0;32m    221\u001b[0m     )\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:220\u001b[0m, in \u001b[0;36maccuracy_score\u001b[1;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Accuracy classification score.\u001b[39;00m\n\u001b[0;32m    155\u001b[0m \n\u001b[0;32m    156\u001b[0m \u001b[38;5;124;03mIn multilabel classification, this function computes subset accuracy:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    216\u001b[0m \u001b[38;5;124;03m0.5\u001b[39;00m\n\u001b[0;32m    217\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    219\u001b[0m \u001b[38;5;66;03m# Compute accuracy for each possible representation\u001b[39;00m\n\u001b[1;32m--> 220\u001b[0m y_type, y_true, y_pred \u001b[38;5;241m=\u001b[39m _check_targets(y_true, y_pred)\n\u001b[0;32m    221\u001b[0m check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[0;32m    222\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultilabel\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:104\u001b[0m, in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m    102\u001b[0m \u001b[38;5;66;03m# No metrics support \"multiclass-multioutput\" format\u001b[39;00m\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultilabel-indicator\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m--> 104\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m is not supported\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(y_type))\n\u001b[0;32m    106\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m    107\u001b[0m     y_true \u001b[38;5;241m=\u001b[39m column_or_1d(y_true)\n",
-      "\u001b[1;31mValueError\u001b[0m: multiclass-multioutput is not supported"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy - Cooler Condition: 0.9977324263038548\n",
+      "Accuracy - Valve Condition: 0.7573696145124716\n",
+      "Accuracy - Pump Leak: 0.9841269841269841\n",
+      "Accuracy - Hydraulic Acc: 0.9070294784580499\n"
      ]
     }
    ],
    "source": [
-    "# Evaluate the model\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Accuracy: {accuracy}\")"
+    "print(\"Accuracy - Cooler Condition:\",accuracy_cooler)\n",
+    "print(\"Accuracy - Valve Condition:\",accuracy_valve)\n",
+    "print(\"Accuracy - Pump Leak:\",accuracy_pump)\n",
+    "print(\"Accuracy - Hydraulic Acc:\",accuracy_hydraulic)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f122f449",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
