Generate and print classification reports and confusion matrices

--- a/Condition Monitoring of Hydraulic System/Boosting.ipynb
+++ b/Condition Monitoring of Hydraulic System/Boosting.ipynb
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048eb4e5",
+   "id": "0ba444af",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9d24136a",
+   "id": "bd512750",
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40c7f85c",
+   "id": "9abb98ca",
    "metadata": {},
    "source": [
     "# Evaluate the performance for each classifier"
@@ -2092,7 +2092,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7db5f5ea",
+   "id": "06a3605e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2104,7 +2104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1316f62",
+   "id": "c70b629e",
    "metadata": {},
    "source": [
     "# Print results"
@@ -2113,7 +2113,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1fd7484e",
+   "id": "8964c8d9",
    "metadata": {},
    "outputs": [
     {
@@ -2135,9 +2135,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1190acae",
+   "metadata": {},
+   "source": [
+    "# Generate classification reports and confusion matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "460f437d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report_cooler = classification_report(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "matrix_cooler = confusion_matrix(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "\n",
+    "report_valve = classification_report(y_test['y_valveCondition'], y_pred_valve)\n",
+    "matrix_valve = confusion_matrix(y_test['y_valveCondition'], y_pred_valve)\n",
+    "\n",
+    "report_pump = classification_report(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "matrix_pump = confusion_matrix(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "\n",
+    "report_hydraulic = classification_report(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "matrix_hydraulic = confusion_matrix(y_test['y_hydraulicAcc'], y_pred_hydraulic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "457fdd06",
+   "metadata": {},
+   "source": [
+    "# Print classification reports and confusion matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b3d9282c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report - Cooler Condition:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           3       1.00      1.00      1.00       156\n",
+      "          20       0.99      1.00      1.00       145\n",
+      "         100       1.00      0.99      1.00       140\n",
+      "\n",
+      "    accuracy                           1.00       441\n",
+      "   macro avg       1.00      1.00      1.00       441\n",
+      "weighted avg       1.00      1.00      1.00       441\n",
+      "\n",
+      "Confusion Matrix - Cooler Condition:\n",
+      "[[156   0   0]\n",
+      " [  0 145   0]\n",
+      " [  0   1 139]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Valve Condition:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          73       0.77      0.73      0.75        70\n",
+      "          80       0.64      0.58      0.60        73\n",
+      "          90       0.67      0.43      0.53        72\n",
+      "         100       0.80      0.93      0.86       226\n",
+      "\n",
+      "    accuracy                           0.76       441\n",
+      "   macro avg       0.72      0.67      0.68       441\n",
+      "weighted avg       0.75      0.76      0.75       441\n",
+      "\n",
+      "Confusion Matrix - Valve Condition:\n",
+      "[[ 51   8   5   6]\n",
+      " [  8  42   4  19]\n",
+      " [  3  10  31  28]\n",
+      " [  4   6   6 210]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Pump Leak:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       252\n",
+      "           1       0.97      0.96      0.97       101\n",
+      "           2       0.96      0.98      0.97        88\n",
+      "\n",
+      "    accuracy                           0.98       441\n",
+      "   macro avg       0.98      0.98      0.98       441\n",
+      "weighted avg       0.98      0.98      0.98       441\n",
+      "\n",
+      "Confusion Matrix - Pump Leak:\n",
+      "[[251   1   0]\n",
+      " [  0  97   4]\n",
+      " [  0   2  86]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Hydraulic Acc:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          90       0.89      0.93      0.91       153\n",
+      "         100       0.85      0.84      0.85        88\n",
+      "         115       0.89      0.89      0.89        73\n",
+      "         130       0.98      0.94      0.96       127\n",
+      "\n",
+      "    accuracy                           0.91       441\n",
+      "   macro avg       0.90      0.90      0.90       441\n",
+      "weighted avg       0.91      0.91      0.91       441\n",
+      "\n",
+      "Confusion Matrix - Hydraulic Acc:\n",
+      "[[142   7   3   1]\n",
+      " [ 11  74   3   0]\n",
+      " [  2   4  65   2]\n",
+      " [  4   2   2 119]]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Classification Report - Cooler Condition:\")\n",
+    "print(report_cooler)\n",
+    "print(\"Confusion Matrix - Cooler Condition:\")\n",
+    "print(matrix_cooler)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Valve Condition:\")\n",
+    "print(report_valve)\n",
+    "print(\"Confusion Matrix - Valve Condition:\")\n",
+    "print(matrix_valve)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Pump Leak:\")\n",
+    "print(report_pump)\n",
+    "print(\"Confusion Matrix - Pump Leak:\")\n",
+    "print(matrix_pump)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Hydraulic Acc:\")\n",
+    "print(report_hydraulic)\n",
+    "print(\"Confusion Matrix - Hydraulic Acc:\")\n",
+    "print(matrix_hydraulic)\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f122f449",
+   "id": "20abd55b",
    "metadata": {},
    "outputs": [],
    "source": []
